syntax="proto3";
import "google/protobuf/empty.proto";
option go_package=".;proto";
//protoc -I . user.proto --go_out=. --go-grpc_out=.
/*

关于为什么会生成两个go语言原因
早期的 --go_out=plugins=grpc 已被废弃，现在推荐使用 --go_out 和 --go-grpc_out 分别生成。
文件名.pb.go：包含 Protocol Buffers 的消息定义和序列化代码。
文件名_grpc.pb.go：包含 gRPC 的服务接口和客户端存根代码。
*/
service User{
    rpc GetUserList(PageInfo) returns(UserListResponse);//用户的列表
    rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse);//通过mobile查询用户
    rpc GetUserById(IdRequest) returns (UserInfoResponse);//通过id查询用户
    rpc CreateUser(CreateUserInfo) returns (UserInfoResponse);//添加用户
    rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty);//更新用户
    rpc CheckPassWord(PasswordCheckInfo) returns(CheckResponse);//检查密码
}   
message PasswordCheckInfo{
    string passWord=1;
    string encryptedPassword=2;
}
message CheckResponse{
    bool success=1;
}
message CreateUserInfo{
    string nickName=1;
    string passWord=2;
    string mobile=3;
}

message UpdateUserInfo{
int32 id=1;
string nickName=2;
string gender=3;
uint64 birthDay=4;

}
message PageInfo{
    uint32 pn=1;
    uint32 pSize=2;

}
message IdRequest{
    int32 id=1;
}
message MobileRequest{
    string mobile=1;
}

message UserInfoResponse{
    int32 id=1;
    string passWord =2;
    string mobile =3;
    string nickName=4;
    uint64 birthDay=5;
    string gender=6;
    int32 role =7;

}
message UserListResponse{
    int32 total =1;
    repeated UserInfoResponse data =2;
}